test/parse/fail/dot.em
# Dot must be followed by symbol or number
# Expect failure

.""
